--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,20 @@
     --primaryColor: #177271;
     --secondaryColor: #FFEC33;
     --thirdColor: #FA4452;
-    --backgorund: #b1b1b1;
+    --backgorund: #c8c8c8;
+    --backgorundForm: #8f8f8f;
 }
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
+}
+.nav-main,
+.services,
+.form,
+.footer {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 *, *::before, *::after {
     box-sizing: inherit;
@@ -16,7 +25,7 @@ html {
 body {
     font-size: 16px; /* 1rem = 10px */
     font-family: 'Roboto', sans-serif;
-    background-image: linear-gradient(to top, var(--backgorund) 0%, var(--white) 35%);
+    background-image: linear-gradient(to top, var(--backgorund) 0%, var(--white) 45%);
 }
 
 .shadow {
@@ -35,6 +44,21 @@ h3 {
 }
 h1, h2, h3 {
     text-align: center;
+}
+/* utilities */
+.w-sm-100 {
+    width: 100%;
+}
+@media (min-width: 768px ) {
+    .w-sm-100 {
+        width: auto;
+    }
+}
+.flex {
+    display: flex;
+}
+.align-r {
+    justify-content: flex-end;
 }
 .title {
     text-align: center;
@@ -61,8 +85,13 @@ h1, h2, h3 {
     text-transform: uppercase;
     font-weight: 700;
     border-radius: 1rem;
-    width: 90%;
     text-align: center;
+    border: none;
+}
+.btn:hover {
+    cursor: pointer;
+    background-color: var(--white);
+    color: var(--primaryColor);
 }
 @media (min-width: 768px) {
     .btn {
@@ -136,3 +165,93 @@ h1, h2, h3 {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+.service {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px;
+}
+
+.service h3 {
+    color: var(--primaryColor);
+    font-weight: 600;
+}
+
+.service p {
+    line-height: 2;
+    text-align: justify;
+}
+
+.service .icons {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--secondaryColor);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.form {
+    background-color: var(--backgorundForm);
+    width: min( 60rem, 100%);
+    margin: 0 auto;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.form fieldset {
+    border: none;
+}
+
+.form legend {
+    text-align: center;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--secondaryColor);
+}
+
+@media (min-width: 768px) {
+    .container-fields {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto;
+        column-gap: 1rem;
+    }
+    .fields:nth-child(3),
+    .fields:nth-child(4) {
+        grid-column: 1/3;
+    }
+}
+
+.fields {
+    margin-bottom: 1rem;
+}
+
+.fields label {
+    color: var(--secondaryColor);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+.fields textarea {
+    height: 20rem;
+}
+.inputs {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+.footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.avatar-github {
+    border-radius: 50%;
+    width: 3%;
+  }
